windows/x86_64/dotlottie-player/include/dotlottie_player.h

/* Type aliases for cleaner C code */
typedef struct dotlottiePlayer DotLottiePlayer;
typedef enum dotlottieDotLottieResult {
  Success = 0,
  Error = 1,
  InvalidParameter = 2,
  ManifestNotAvailable = 3,
  AnimationNotLoaded = 4,
  InsufficientCondition = 5,
  FeatureNotEnabled = 6,
} dotlottieDotLottieResult;
/**
 * Opaque C-facing wrapper for StateMachineEngine.
 * Always present; inner is only populated with state-machines feature.
 * Load functions return null_mut() when state-machines is off, so C callers
 * will never hold a valid (non-null) pointer when the feature is disabled.
 */
typedef struct dotlottieDotLottieStateMachine dotlottieDotLottieStateMachine;
typedef struct dotlottiePlayer dotlottiePlayer;
/**
 * State machine event with type tag and data union.
 * String pointers are valid until the next poll call.
 */
typedef struct dotlottieStateMachineEvent {
  enum dotlottieStateMachineEventType event_type;
  union dotlottieStateMachineEventData data;
} dotlottieStateMachineEvent;
enum dotlottieDotLottieResult dotlottie_load_animation(struct dotlottiePlayer *ptr,
                                                       const char *animation_id);
/**
 * Get the manifest as a JSON string.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `buffer`: Buffer to store the JSON, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::ManifestNotAvailable` if no manifest is available
 * - `DotLottieResult::InvalidParameter` if ptr is invalid
 * - `DotLottieResult::FeatureNotEnabled` if built without the `dotlottie` feature
 * - `DotLottieResult::Error` if the manifest cannot be serialized to JSON
 */
enum dotlottieDotLottieResult dotlottie_get_manifest(struct dotlottiePlayer *ptr,
                                                     char *buffer,
                                                     uintptr_t *size_out);
/**
 * Sets the playback segment for the animation.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `segment`: Pointer to an array of 2 floats [start_frame, end_frame], or NULL to clear
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::InvalidParameter` if the player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_set_segment(struct dotlottiePlayer *ptr,
                                                    const float (*segment)[2]);
/**
 * Returns the current segment.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `result`: Pointer to a [f32; 2] array to store [start_frame, end_frame]
 *
 * # Returns
 * - `DotLottieResult::Success` if segment exists and was copied
 * - `DotLottieResult::InvalidParameter` if pointers are invalid or no segment is set
 */
enum dotlottieDotLottieResult dotlottie_get_segment(struct dotlottiePlayer *ptr,
                                                    float (*result)[2]);
/**
 * Gets a marker by index.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `idx`: Index of the marker (0-based)
 * - `name`: Pointer to receive the marker name (library-owned, do not free)
 * - `start`: Pointer to receive the marker start frame, or NULL to skip
 * - `end`: Pointer to receive the marker end frame, or NULL to skip
 *
 * # Returns
 * - `DOTLOTTIE_SUCCESS` on success
 * - `DOTLOTTIE_INVALID_PARAMETER` if ptr/name is null or index is out of bounds
 */
enum dotlottieDotLottieResult dotlottie_get_marker(struct dotlottiePlayer *ptr,
                                                   uint32_t idx,
                                                   const char **name,
                                                   float *start,
                                                   float *end);
/**
 * Returns the active animation ID.
 *
 * # Parameters
 * - `ptr`: Pointer to the Player instance
 * - `buffer`: Buffer to store the ID, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::FeatureNotEnabled` if built without the `dotlottie` feature
 * - `DotLottieResult::InvalidParameter` if no animation is active or player pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_get_animation_id(struct dotlottiePlayer *ptr,
                                                         char *buffer,
                                                         uintptr_t *size_out);
/**
 * Load a state machine by ID from the loaded .lottie file
 *
 * Returns a pointer to the StateMachineEngine or NULL on error.
 * The returned state machine borrows the runtime - runtime cannot be destroyed
 * while the state machine exists.
 *
 * # Safety
 * - Runtime pointer must be valid
 * - Returned state machine must be destroyed with dotlottie_state_machine_release()
 *   BEFORE destroying the runtime
 */
struct dotlottieDotLottieStateMachine *dotlottie_state_machine_load(struct dotlottiePlayer *runtime,
                                                                    const char *state_machine_id);
/**
 * Load a state machine from a JSON definition string
 *
 * Returns a pointer to the StateMachineEngine or NULL on error.
 */
struct dotlottieDotLottieStateMachine *dotlottie_state_machine_load_data(struct dotlottiePlayer *runtime,
                                                                         const char *state_machine_definition);
/**
 * Start the state machine with the specified URL policy.
 *
 * # Parameters
 * - `sm`: Pointer to the StateMachineEngine instance
 * - `whitelist`: Comma-separated list of allowed URL patterns (or NULL for empty)
 * - `require_user_interaction`: Whether user interaction is required before opening URLs
 *
 * # Returns
 * DotLottieResult::Success if started, error variant if failed
 * - `DotLottieResult::FeatureNotEnabled` if built without the `state-machines` feature
 */
enum dotlottieDotLottieResult dotlottie_state_machine_start(struct dotlottieDotLottieStateMachine *sm,
                                                            const char *whitelist,
                                                            bool require_user_interaction);
/**
 * Stop the state machine (does not release the borrow)
 *
 * Call dotlottie_state_machine_release() to actually destroy the state machine
 * and release the runtime borrow.
 */
enum dotlottieDotLottieResult dotlottie_state_machine_stop(struct dotlottieDotLottieStateMachine *sm);
/**
 * Destroy the state machine and release the runtime borrow
 *
 * After calling this, the state machine pointer is invalid and the runtime
 * can be used again.
 *
 * # Safety
 * - State machine pointer must be valid
 * - Must not use state machine pointer after this call
 */
void dotlottie_state_machine_release(struct dotlottieDotLottieStateMachine *sm);
/**
 * Tick the state machine (advances animation by `dt` milliseconds and processes state logic).
 *
 * If `rendered` is non-null, writes `true` when a new frame was rendered
 * and `false` when the frame was unchanged.
 */
enum dotlottieDotLottieResult dotlottie_state_machine_tick(struct dotlottieDotLottieStateMachine *sm,
                                                           float dt,
                                                           bool *rendered);
/**
 * Helper functions for posting specific event types
 */
enum dotlottieDotLottieResult dotlottie_state_machine_post_click(struct dotlottieDotLottieStateMachine *sm,
                                                                 float x,
                                                                 float y);
enum dotlottieDotLottieResult dotlottie_state_machine_post_pointer_down(struct dotlottieDotLottieStateMachine *sm,
                                                                        float x,
                                                                        float y);
enum dotlottieDotLottieResult dotlottie_state_machine_post_pointer_up(struct dotlottieDotLottieStateMachine *sm,
                                                                      float x,
                                                                      float y);
enum dotlottieDotLottieResult dotlottie_state_machine_post_pointer_move(struct dotlottieDotLottieStateMachine *sm,
                                                                        float x,
                                                                        float y);
enum dotlottieDotLottieResult dotlottie_state_machine_post_pointer_enter(struct dotlottieDotLottieStateMachine *sm,
                                                                         float x,
                                                                         float y);
enum dotlottieDotLottieResult dotlottie_state_machine_post_pointer_exit(struct dotlottieDotLottieStateMachine *sm,
                                                                        float x,
                                                                        float y);
/**
 * Fire a named event input
 */
enum dotlottieDotLottieResult dotlottie_state_machine_fire_event(struct dotlottieDotLottieStateMachine *sm,
                                                                 const char *event_name);
/**
 * Set a numeric input
 */
enum dotlottieDotLottieResult dotlottie_state_machine_set_numeric_input(struct dotlottieDotLottieStateMachine *sm,
                                                                        const char *key,
                                                                        float value);
/**
 * Set a string input
 */
enum dotlottieDotLottieResult dotlottie_state_machine_set_string_input(struct dotlottieDotLottieStateMachine *sm,
                                                                       const char *key,
                                                                       const char *value);
/**
 * Set a boolean input
 */
enum dotlottieDotLottieResult dotlottie_state_machine_set_boolean_input(struct dotlottieDotLottieStateMachine *sm,
                                                                        const char *key,
                                                                        bool value);
/**
 * Get a numeric input value
 */
enum dotlottieDotLottieResult dotlottie_state_machine_get_numeric_input(struct dotlottieDotLottieStateMachine *sm,
                                                                        const char *key,
                                                                        float *result);
/**
 * Get a string input value.
 *
 * # Parameters
 * - `sm`: Pointer to the StateMachineEngine instance
 * - `key`: Null-terminated C string with the input key
 * - `buffer`: Buffer to store the value, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::FeatureNotEnabled` if built without the `state-machines` feature
 * - `DotLottieResult::InvalidParameter` if the input doesn't exist or pointers are invalid
 */
enum dotlottieDotLottieResult dotlottie_state_machine_get_string_input(struct dotlottieDotLottieStateMachine *sm,
                                                                       const char *key,
                                                                       char *buffer,
                                                                       uintptr_t *size_out);
/**
 * Get a boolean input value
 */
enum dotlottieDotLottieResult dotlottie_state_machine_get_boolean_input(struct dotlottieDotLottieStateMachine *sm,
                                                                        const char *key,
                                                                        bool *result);
/**
 * Get current state name.
 *
 * # Parameters
 * - `sm`: Pointer to the StateMachineEngine instance
 * - `buffer`: Buffer to store the state name, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::FeatureNotEnabled` if built without the `state-machines` feature
 * - `DotLottieResult::InvalidParameter` if pointer is invalid
 */
enum dotlottieDotLottieResult dotlottie_state_machine_get_current_state(struct dotlottieDotLottieStateMachine *sm,
                                                                        char *buffer,
                                                                        uintptr_t *size_out);
/**
 * Get interaction types for framework setup
 *
 * Returns bit flags indicating which interaction types are needed.
 * Frameworks should register listeners for the returned interaction types.
 */
enum dotlottieDotLottieResult dotlottie_state_machine_get_framework_setup(struct dotlottieDotLottieStateMachine *sm,
                                                                          uint16_t *result);
/**
 * Poll for the next state machine event
 *
 * Returns 1 if an event was retrieved, 0 if no events are available, or -1 on error.
 * String pointers in the event struct are valid until the next poll call.
 *
 * # Example
 * ```c
 * StateMachineEvent event;
 * while (dotlottie_state_machine_poll_event(sm, &event) == 1) {
 *     switch (event.event_type) {
 *         case StateMachineEventType_StateMachineTransition:
 *             // Pointers valid until next poll
 *             printf("Transition: %s -> %s\n",
 *                    event.data.transition.previous_state,
 *                    event.data.transition.new_state);
 *             break;
 *         case StateMachineEventType_StateMachineStateEntered:
 *             printf("Entered: %s\n", event.data.state.state);
 *             break;
 *     }
 * }
 * ```
 */
int32_t dotlottie_state_machine_poll_event(struct dotlottieDotLottieStateMachine *sm,
                                           struct dotlottieStateMachineEvent *event);
/**
 * Get the state machine definition as JSON string.
 *
 * # Parameters
 * - `runtime`: Pointer to the Player instance
 * - `state_machine_id`: Null-terminated C string with the state machine ID
 * - `buffer`: Buffer to store the JSON, or NULL to query required size
 * - `size_out`: Pointer to receive the required buffer size (including null terminator)
 *
 * # Returns
 * - `DotLottieResult::Success` on success
 * - `DotLottieResult::FeatureNotEnabled` if built without the `state-machines` feature
 * - `DotLottieResult::InvalidParameter` if state machine not found or pointers are invalid
 */
enum dotlottieDotLottieResult dotlottie_get_state_machine(struct dotlottiePlayer *runtime,
                                                          const char *state_machine_id,
                                                          char *buffer,
                                                          uintptr_t *size_out);