lib/src/ffi/dotlottie_bindings.dart


final dotlottieGetMarker = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Uint32, Pointer<Pointer<Utf8>>,
        Pointer<Float>, Pointer<Float>),
    int Function(Pointer<DotLottiePlayer>, int, Pointer<Pointer<Utf8>>,
        Pointer<Float>, Pointer<Float>)>('dotlottie_get_marker');

// Segments
// C type is `const float (*)[2]` — at the machine level this is just float*.
final dotlottieSetSegment = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Pointer<Float>),
    int Function(
        Pointer<DotLottiePlayer>, Pointer<Float>)>('dotlottie_set_segment');

final dotlottieGetSegment = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Pointer<Float>),
    int Function(
        Pointer<DotLottiePlayer>, Pointer<Float>)>('dotlottie_get_segment');

// Multi-animation
final dotlottieLoadAnimation = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Pointer<Utf8>),
    int Function(
        Pointer<DotLottiePlayer>, Pointer<Utf8>)>('dotlottie_load_animation');

final dotlottieGetAnimationId = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Pointer<Uint8>, Pointer<UintPtr>),
    int Function(Pointer<DotLottiePlayer>, Pointer<Uint8>,
        Pointer<UintPtr>)>('dotlottie_get_animation_id');

final dotlottieGetManifest = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Pointer<Uint8>, Pointer<UintPtr>),
    int Function(Pointer<DotLottiePlayer>, Pointer<Uint8>,
        Pointer<UintPtr>)>('dotlottie_get_manifest');

// ---------------------------------------------------------------------------
// State machine
// ---------------------------------------------------------------------------

// Lifecycle
final dotlottieStateMachineLoad = _lib.lookupFunction<
    Pointer<DotLottieStateMachine> Function(
        Pointer<DotLottiePlayer>, Pointer<Utf8>),
    Pointer<DotLottieStateMachine> Function(Pointer<DotLottiePlayer>,
        Pointer<Utf8>)>('dotlottie_state_machine_load');

final dotlottieStateMachineLoadData = _lib.lookupFunction<
    Pointer<DotLottieStateMachine> Function(
        Pointer<DotLottiePlayer>, Pointer<Utf8>),
    Pointer<DotLottieStateMachine> Function(Pointer<DotLottiePlayer>,
        Pointer<Utf8>)>('dotlottie_state_machine_load_data');

final dotlottieStateMachineStart = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Bool),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>,
        bool)>('dotlottie_state_machine_start');

final dotlottieStateMachineStop = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>),
    int Function(
        Pointer<DotLottieStateMachine>)>('dotlottie_state_machine_stop');

final dotlottieStateMachineRelease = _lib.lookupFunction<
    Void Function(Pointer<DotLottieStateMachine>),
    void Function(
        Pointer<DotLottieStateMachine>)>('dotlottie_state_machine_release');

// Tick
final dotlottieStateMachineTick = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Pointer<Bool>),
    int Function(Pointer<DotLottieStateMachine>, double,
        Pointer<Bool>)>('dotlottie_state_machine_tick');

// Pointer events (all take float x, y)
final dotlottieStateMachinePostPointerDown = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Float),
    int Function(Pointer<DotLottieStateMachine>, double,
        double)>('dotlottie_state_machine_post_pointer_down');

final dotlottieStateMachinePostPointerUp = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Float),
    int Function(Pointer<DotLottieStateMachine>, double,
        double)>('dotlottie_state_machine_post_pointer_up');

final dotlottieStateMachinePostPointerMove = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Float),
    int Function(Pointer<DotLottieStateMachine>, double,
        double)>('dotlottie_state_machine_post_pointer_move');

final dotlottieStateMachinePostPointerEnter = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Float),
    int Function(Pointer<DotLottieStateMachine>, double,
        double)>('dotlottie_state_machine_post_pointer_enter');

final dotlottieStateMachinePostPointerExit = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Float),
    int Function(Pointer<DotLottieStateMachine>, double,
        double)>('dotlottie_state_machine_post_pointer_exit');

final dotlottieStateMachinePostClick = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Float, Float),
    int Function(Pointer<DotLottieStateMachine>, double,
        double)>('dotlottie_state_machine_post_click');

// Inputs
final dotlottieStateMachineFireEvent = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>),
    int Function(Pointer<DotLottieStateMachine>,
        Pointer<Utf8>)>('dotlottie_state_machine_fire_event');

final dotlottieStateMachineSetNumericInput = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Float),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>,
        double)>('dotlottie_state_machine_set_numeric_input');

final dotlottieStateMachineSetStringInput = _lib.lookupFunction<
    Int32 Function(
        Pointer<DotLottieStateMachine>, Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>,
        Pointer<Utf8>)>('dotlottie_state_machine_set_string_input');

final dotlottieStateMachineSetBooleanInput = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Bool),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>,
        bool)>('dotlottie_state_machine_set_boolean_input');

final dotlottieStateMachineGetNumericInput = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Pointer<Float>),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>,
        Pointer<Float>)>('dotlottie_state_machine_get_numeric_input');

final dotlottieStateMachineGetStringInput = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Pointer<Uint8>,
        Pointer<UintPtr>),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Pointer<Uint8>,
        Pointer<UintPtr>)>('dotlottie_state_machine_get_string_input');

final dotlottieStateMachineGetBooleanInput = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>, Pointer<Bool>),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Utf8>,
        Pointer<Bool>)>('dotlottie_state_machine_get_boolean_input');

// Status
final dotlottieStateMachineGetCurrentState = _lib.lookupFunction<
    Int32 Function(
        Pointer<DotLottieStateMachine>, Pointer<Uint8>, Pointer<UintPtr>),
    int Function(Pointer<DotLottieStateMachine>, Pointer<Uint8>,
        Pointer<UintPtr>)>('dotlottie_state_machine_get_current_state');

final dotlottieStateMachineGetFrameworkSetup = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottieStateMachine>, Pointer<Uint16>),
    int Function(Pointer<DotLottieStateMachine>,
        Pointer<Uint16>)>('dotlottie_state_machine_get_framework_setup');

// Event polling
final dotlottieStateMachinePollEvent = _lib.lookupFunction<
    Int32 Function(
        Pointer<DotLottieStateMachine>, Pointer<DotLottieStateMachineEvent>),
    int Function(Pointer<DotLottieStateMachine>,
        Pointer<DotLottieStateMachineEvent>)>(
    'dotlottie_state_machine_poll_event');

// Definition fetch (player-level)
final dotlottieGetStateMachine = _lib.lookupFunction<
    Int32 Function(Pointer<DotLottiePlayer>, Pointer<Utf8>, Pointer<Uint8>,
        Pointer<UintPtr>),
    int Function(Pointer<DotLottiePlayer>, Pointer<Utf8>, Pointer<Uint8>,
        Pointer<UintPtr>)>('dotlottie_get_state_machine');
